# market-debate-lab

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
output/: bear_case.md  bull_case.md  final_report.md  judge_verdict.md  research.md
src/market_debate_lab/: app.py  crew.py  main.py  settings.py
src/market_debate_lab/config/: agents.yaml  tasks.yaml
