[project]
name = "market-debate-lab"
version = "0.1.0"
description = "debate using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai-tools>=0.76.0",
    "crewai[tools]>=0.108.0,<1.0.0",
    "gradio>=6.14.0",
    "python-dotenv>=1.2.2",
]

[project.scripts]
debate = "market_debate_lab.main:run"
run_crew = "market_debate_lab.main:run"
train = "market_debate_lab.main:train"
replay = "market_debate_lab.main:replay"
test = "market_debate_lab.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
